--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/WebsyIO/basic-express-server#readme",
   "dependencies": {
+    "@websy/websy-designs": "^1.0.4",
     "express": "^4.17.1"
   },
   "devDependencies": {
