--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
   "homepage": "https://github.com/WebsyIO/basic-express-server#readme",
   "dependencies": {
     "@websy/websy-designs": "^1.0.4",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "json-server": "^0.17.0"
   },
   "devDependencies": {
     "@babel/core": "^7.2.2",
