--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "concurrently \"grunt\"  \"node index\""
+    "start": "concurrently \"grunt\"  \"node index\"",
+    "json-server": "json-server --watch db.json"
   },
   "repository": {
     "type": "git",
