--- a/package.json
+++ b/package.json
@@ -4,9 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "concurrently \"grunt\"  \"node index\"",
-    "json-server": "json-server --watch db.json"
+    "server": "json-server --watch db.json"
   },
   "repository": {
     "type": "git",
